--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,41 +1,73 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!-- <html xmlns:th="http://www.thymeleaf.org"> -->
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head th:fragment="head">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
 
+<body>
 
     <!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:fragment="menu"> -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:fragment="menu(v_menu)">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Spring Boot</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
                         <!-- <a class="nav-link active" aria-current="page" href="#">홈</a> -->
-                        <a class="nav-link" th:classappend="${v_menu} == 'home' ? 'active'" th:href="@{/}"href="#">홈</a>
+                        <a class="nav-link" th:classappend="${v_menu} == 'home' ? 'active'" th:href="@{/}"
+                            href="#">홈</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:classappend="${v_menu} == 'board' ? 'active'" th:href="@{/board/list}" href="#">게시판</a>
+                        <a class="nav-link" th:classappend="${v_menu} == 'board' ? 'active'" th:href="@{/board/list}"
+                            href="#">게시판</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li> -->
                 </ul>
-                <!-- <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
+                <!-- <form class="d-flex" role="search"> -->
+                <!-- <button class="btn btn-outline-success" type="submit">Login</button> -->
+                <!-- <a class="btn btn-outline-success" th:href="@{/account/login}">Login</a> -->
+                <!-- 인증 적용 -->
+                <!-- 로그인 (로그인 화면으로)-->
+                <a class="btn btn-outline-success mx-2" th:href="@{/account/login}"
+                                                        sec:authorize="!isAuthenticated()">로그인</a>
+                <!-- 회원가입 (회원가입 화면으로)-->
+                <a class="btn btn-outline-success" th:href="@{/account/register}"
+                                                   sec:authorize="!isAuthenticated()">회원가입</a>
+                <!-- </form> -->
+                <!-- <form class="d-flex" role="search" sec:authorize="isAuthenticated()" th:action="@{/logout}"> -->
+                <!-- 로그아웃 -->
+                <form class="d-flex" role="search" sec:authorize="isAuthenticated()" method="post"
+                    th:action="@{/logout}">
+                    <!-- <span class="text-white">사용자</span> -->
+                    <span class="text-white" sec:authentication="name">사용자</span>
+                    <!-- <span class="text-white mx-2">권한</span> -->
+                    <span class="text-white mx-2" sec:authentication="principal.authorities">권한</span>
+                    <button class="btn btn-outline-success" type="submit">로그아웃</button>
+                </form>
             </div>
         </div>
     </nav>
 </body>
 
 </html>
+<div sec:authorize="isAuthenticated()">
+    This content is only shown to authenticated users.
+</div>
+<div sec:authorize="hasRole('ROLE_ADMIN')">
+    This content is only shown to administrators.
+</div>
+<div sec:authorize="hasRole('ROLE_USER')">
+    This content is only shown to users.
+</div>
