--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -44,7 +44,8 @@
                     <td th:text="${board.id}">Mark</td>
 <!--                    <td th:text="${board.title}">Otto</td>-->
                     <td><a th:text="${board.title}" th:href="@{/board/form(id=${board.id})}">Otto</a></td>
-                    <td>홍길동</td>
+                    <!-- <td>홍길동</td> -->
+                    <td th:text="${board.user.username}">홍길동</td>
                 </tr>
                 </tbody>
             </table>
