--- a/src/main/resources/templates/board/form.html
+++ b/src/main/resources/templates/board/form.html
@@ -1,32 +1,39 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <!--<head th:replace="fragments/common :: head">-->
+
 <head th:replace="~{fragments/common :: head}">
 </head>
+
 <body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:replace="~{fragments/common :: menu('board')}">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:replace="~{fragments/common :: menu('board')}">
 
-</nav>
+    </nav>
     <main class="container">
-<!--        <form method="post" th:action="@{/board/form}" action="#">-->
+        <!--        <form method="post" th:action="@{/board/form}" action="#">-->
         <form method="post" th:action="@{/board/form}" action="#" th:object="${board}">
             <input type="hidden" th:field="*{id}">
             <div class="bg-body-tertiary p-5 rounded">
                 <h2>게시판</h2>
                 <div class="mb-3">
                     <label for="title" class="form-label">제목</label>
-<!--                    <input type="text" class="form-control" id="title" name="title" th:field="*{title}">-->
-                    <input type="text" class="form-control" th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" id="title" name="title" th:field="*{title}">
+                    <!--                    <input type="text" class="form-control" id="title" name="title" th:field="*{title}">-->
+                    <input type="text" class="form-control"
+                        th:classappend="${#fields.hasErrors('title')} ? 'is-invalid'" id="title" name="title"
+                        th:field="*{title}">
 
                     <div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
                         title Error
                     </div>
 
                     <label for="content" class="form-label">내용</label>
-<!--                    <textarea class="form-control" id="content" rows="3" name="content" th:field="*{content}"></textarea>-->
-                    <textarea class="form-control" th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'" id="content" rows="3" name="content" th:field="*{content}"></textarea>
+                    <!--                    <textarea class="form-control" id="content" rows="3" name="content" th:field="*{content}"></textarea>-->
+                    <textarea class="form-control" th:classappend="${#fields.hasErrors('content')} ? 'is-invalid'"
+                        id="content" rows="3" name="content" th:field="*{content}"></textarea>
 
                     <div class="invalid-feedback" th:if="${#fields.hasErrors('content')}" th:errors="*{content}">
                         content Error
@@ -34,21 +41,33 @@
 
                 </div>
                 <p class="text-end">
-                <button type="submit" class="btn btn-primary">확인</button>
-                <!--                    <button type="reset" class="btn btn-primary">취소</button>-->
-                <a type="reset" class="btn btn-primary" th:href="@{/board/list}">취소</a>
+                    <button type="submit" class="btn btn-primary">확인</button>
+                    <!-- 삭제 버튼 추가 -->
+                    <!-- <button type="button" class="btn btn-primary">삭제</button> -->
+                    <!-- deleteBoard(*{id}) = 삭제 할때 id들고감 -->
+                    <button type="button" class="btn btn-primary" sec:authorize="hasRole('ROLE_ADMIN')"
+                                                                  th:onclick="|deleteBoard(*{id})|">삭제</button>
+                    <!-- <button type="reset" class="btn btn-primary">취소</button>-->
+                    <a type="reset" class="btn btn-primary" th:href="@{/board/list}">취소</a>
                 </p>
             </div>
         </form>
     </main>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script>
+        function deleteBoard(id) {
+            // ajax 쓰기전 되는지 alert로 확인
+            // alert(id);
+            $.ajax({
+                url: '/api/boards/'+id,
+                type: 'DELETE',
+                success: function (result) {
+                    alert("삭제됐습니다.")
+                    location.href="/board/list"
+                }
+            });
+        }
+    </script>
 </body>
+
 </html>
-<!-- 22번째줄에 아래것들 결합한것 -->
-<!--                    <td th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title Error</td>-->
-<!--<div class="col-md-6"> -->
-<!--    <label for="validationServer03" class="form-label">City</label> -->
-<!--    <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required> -->
-<!--    <div id="validationServer03Feedback" class="invalid-feedback"> -->
-<!--        Please provide a valid city. -->
-<!--    </div> -->
-<!--</div> -->
